--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
       <img id="sporeflash" src="spore_bright.png" width="40" height="50">
       <img id="scan_grid" src="scan_grid.png" width="97" height="97">
       <img id="scanner_line" src="scanner_line.png" width="3" height="97">
+      <img id="scannerblurbbox" src="textbox.png" width="400" height="400">
+      
 
 
     </div>
