AUDIO IMPLEMENTED GRAHHHHH
hell on earth. but audio works now
TODO: fix the looping for music.... somehow...

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body>
   <canvas id="myCanvas" width="1000" height="562"> unsupported browser. stop tryna be special and just use
     chrome</canvas>
+    
   <div style="display:none;">
     <img id="player_sprite" src="textures/player_drone.png" width="50" height="50">
     <img id="player_sprite_RCSjets_V" src="textures/RCSjets_V.png" width="50" height="50">
@@ -31,14 +32,15 @@
     <img id="sporeflash" src="textures/spore_bright.png" width="40" height="50">
     <img id="scan_grid" src="textures/scan_grid.png" width="97" height="97">
     <img id="scanner_line" src="textures/scanner_line.png" width="3" height="97">
-    <img id="scannerblurbbox" src="textures/textbox.png" width="400" height="400">
+    <img id="scannerblurbbox" src="textures/textbox.png" width="400" height="400"?>
 
-
-
+    
 
   </div>
+  <script src="lib/howler.min.js"></script>
   <script type="text/javascript" src="events.js"></script>
   <script type="text/javascript" src="loadimages.js"></script>
+  <script type="text/javascript" src="loadaudio.js"></script>
   <script type="text/javascript" src="vector2D.js"></script>
   <script type="text/javascript" src="mainloop.js"></script>
   <script type="text/javascript" src="main.js"></script>
