--- a/index.html
+++ b/index.html
@@ -56,13 +56,14 @@
     
 
   </div>
-  <script type="text/javascript" src="settings.js"></script>
-  <script type="text/javascript" src="events.js"></script>
-  <script type="text/javascript" src="loadimages.js"></script>
-  <script type="text/javascript" src="loadaudio.js"></script>
-  <script type="text/javascript" src="vector2D.js"></script>
-  <script type="text/javascript" src="mainloop.js"></script>
-  <script type="text/javascript" src="main.js"></script>
+  <!-- load "plugins" --> 
+  <script type="text/javascript" src="scripts/loadimages.js"></script>
+  <script type="text/javascript" src="scripts/loadaudio.js"></script>
+  <!-- load and launch the game engine-->
+  <script type="text/javascript" src="scripts/engine/events.js"></script>
+  <script type="text/javascript" src="scripts/engine/vector2D.js"></script>
+  <script type="text/javascript" src="scripts/engine/mainloop.js"></script>
+  <script type="text/javascript" src="scripts/engine/launcher.js"></script>
 </body>
 
 </html>
