moved game entities to their own file

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
   <script type="text/javascript" src="scripts/loadaudio.js"></script>
   <!-- load and launch the game engine-->
   <script type="text/javascript" src="scripts/engine/events.js"></script>
+  <script type="text/javascript" src="scripts/engine/entities.js"></script>
   <script type="text/javascript" src="scripts/engine/vector2D.js"></script>
   <script type="text/javascript" src="scripts/engine/mainloop.js"></script>
   <script type="text/javascript" src="scripts/engine/launcher.js"></script>
