--- a/index.html
+++ b/index.html
@@ -19,19 +19,6 @@
     }
   </style>
 
-  <!-- load "plugins" -->
-  <script type="text/javascript" src="scripts/loadimages.js"></script>
-  <script type="text/javascript" src="scripts/loadaudio.js"></script>
-
-  <script src="lib/howler.min.js"></script>
-
-  <!-- load and launch the game engine-->
-  <script type="text/javascript" src="scripts/engine/events.js"></script>
-  <script type="text/javascript" src="scripts/engine/entities.js"></script>
-  <script type="text/javascript" src="scripts/engine/vector2D.js"></script>
-  <script type="text/javascript" src="scripts/engine/mainloop.js"></script>
-  <script type="text/javascript" src="scripts/engine/launcher.js"></script>
-  <script src="scripts/engine/audio.js"></script>
 </head>
 
 <body>
@@ -69,5 +56,21 @@
   </div>
 
 </body>
+
+<!-- load "plugins" -->
+<script type="text/javascript" src="scripts/loadimages.js"></script>
+<script type="text/javascript" src="scripts/loadaudio.js"></script>
+
+<script src="lib/howler.min.js"></script>
+
+
+<!-- load and launch the game engine-->
+
+<script type="text/javascript" src="scripts/engine/audio.js"></script>
+<script type="text/javascript" src="scripts/engine/events.js"></script>
+<script type="text/javascript" src="scripts/engine/entities.js"></script>
+<script type="text/javascript" src="scripts/engine/vector2D.js"></script>
+<script type="text/javascript" src="scripts/engine/mainloop.js"></script>
+<script type="text/javascript" src="scripts/engine/launcher.js"></script>
 
 </html>
