--- a/index.html
+++ b/index.html
@@ -57,15 +57,18 @@
 
 </body>
 
+
+<!-- These all have to happen after the rest of the content of the page, annoyingly.-->
+
+
+<!-- import libraries -->
+<script src="lib/howler.min.js"></script>
+
 <!-- load "plugins" -->
 <script type="text/javascript" src="scripts/loadimages.js"></script>
 <script type="text/javascript" src="scripts/loadaudio.js"></script>
 
-<script src="lib/howler.min.js"></script>
-
-
 <!-- load and launch the game engine-->
-
 <script type="text/javascript" src="scripts/engine/audio.js"></script>
 <script type="text/javascript" src="scripts/engine/events.js"></script>
 <script type="text/javascript" src="scripts/engine/entities.js"></script>
