--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <script type="text/javascript" src="scripts/loadimages.js"></script>
   <script type="text/javascript" src="scripts/loadaudio.js"></script>
 
-  <!-- load and launch the game engine-->
+  <!-- load the game engine-->
   <script type="text/javascript" src="scripts/engine/audio.js"></script>
   <script type="text/javascript" src="scripts/engine/events.js"></script>
   <script type="text/javascript" src="scripts/engine/entities.js"></script>
@@ -49,12 +49,11 @@
 </head>
 
 <body>
-  <canvas id="myCanvas" width="1000" height="562"> unsupported browser. stop tryna be special and just use
-    chrome</canvas>
+  <canvas id="myCanvas" width="1000" height="562"> unsupported browser, try something chromium based</canvas>
 
  
 </body>
-
+<!-- launch the game engine-->
 <script type="text/javascript" src="scripts/engine/launcher.js"></script>
 
 </html>
