--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <!-- load "plugins" -->
   <script type="text/javascript" src="scripts/loadimages.js"></script>
   <script type="text/javascript" src="scripts/loadaudio.js"></script>
+  <script type="text/javascript" src="scripts/animations.js"></script>
 
   <!-- load the game engine-->
   <script type="text/javascript" src="scripts/engine/vector2D.js"></script>
@@ -49,7 +50,7 @@
 </head>
 
 <body>
-  <canvas id="myCanvas" width="1000" height="562"> unsupported browser, try something chromium based</canvas>
+  <canvas id="myCanvas" width="1920" height="1080"> unsupported browser, try something chromium based</canvas>
 
  
 </body>
