--- a/index.html
+++ b/index.html
@@ -33,19 +33,7 @@
   <meta charset="utf-8" />
   <title>NAU-0506</title>
 
-  <style>
-    * {
-      background-color: rgb(0, 3, 58);
-      padding: 0;
-      margin: 0;
-    }
-
-    canvas {
-      background: #000000;
-      display: block;
-      margin: 0 auto;
-    }
-  </style>
+  <link rel="stylesheet" href="main.css">
 
 </head>
 
