--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <meta charset="utf-8" />
   <title>NAU-0506</title>
 
+  <!-- Connect main.css file so styles are read from there -->
   <link rel="stylesheet" href="main.css">
 
 </head>
