--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 </head>
 
 <body>
+  <div id="canvasDiv">
   <canvas id="myCanvas" width="1920" height="1080"> unsupported browser, try something chromium based</canvas>
+</div>
 </body>
 
 <!-- launch the game engine-->
