--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <img id="scan_grid" src="textures/scan_grid.png" width="97" height="97">
     <img id="scanner_line" src="textures/scanner_line.png" width="3" height="97">
     <img id="scannerblurbbox" src="textures/textbox.png" width="400" height="400" ?>
+    <img id="camera_interference" src="textures/interference.png" width="500" height="500" ?>
+    
   </div>
 
   <!-- import libraries -->
