audio reorganization and renaming

--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
 
   <!-- load "plugins" -->
   <script type="text/javascript" src="scripts/loadimages.js"></script>
-  <script type="text/javascript" src="scripts/loadaudio.js"></script>
   <script type="text/javascript" src="scripts/animations.js"></script>
+  <script type="text/javascript" src="scripts/audio.js"></script>
 
   <!-- load the game engine-->
   <script type="text/javascript" src="scripts/engine/vector2D.js"></script>
-  <script type="text/javascript" src="scripts/engine/audio.js"></script>
   <script type="text/javascript" src="scripts/engine/events.js"></script>
   <script type="text/javascript" src="scripts/engine/entities.js"></script>
   <script type="text/javascript" src="scripts/engine/mainloop.js"></script>
