changes listed in description
added:
spore collision position reporting
spore collision position reporting toggle

global variable for report position and age

added a second transparent canvas for improved text rendering.
so text is no-longer blurry!
just use ctx_text to get the 2d context of the text layer!

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <body>
   <div id="canvasDiv">
     <canvas id="myCanvas" width="1920" height="1080"> unsupported browser, try something chromium based</canvas>
+    <canvas id="textCanvas" width="1920" height="1080"> unsupported browser, try something chromium based</canvas>
   </div>
 </body>
 
