added rudimentary proof of concept enemy
added enemies and the ability to die from them

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <img id="scanner_line" src="textures/scanner_line.png" width="3" height="97">
     <img id="scannerblurbbox" src="textures/textbox.png" width="400" height="400" ?>
     <img id="camera_interference" src="textures/interference.png" width="500" height="500" ?>
+    <img id="playerglow" src="textures/player_drone_powerglow.png" width="500" height="500" ?>
+    <img id="sporemonsterparticle" src="textures/sporemonster.png" width="500" height="500" ?>
+    <img id="sporemonsterparticle_enraged" src="textures/sporemonster_enraged.png" width="500" height="500" ?>
 
   </div>
 
