new main menu/intro cutscene

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <script src="lib/howler.min.js"></script>
 
   <!-- load "plugins" -->
+  <script type="text/javascript" src="scripts/mainmenu.js"></script>
   <script type="text/javascript" src="scripts/loadimages.js"></script>
   <script type="text/javascript" src="scripts/animations.js"></script>
   <script type="text/javascript" src="scripts/audio.js"></script>
